--- a/package.json
+++ b/package.json
@@ -4,17 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-dom": "^16.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "start": "webpack-dev-server --no-inline"
   },
   "browserslist": {
     "production": [
@@ -31,6 +24,12 @@
   "devDependencies": {
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
-    "typescript": "^3.7.2"
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "purs-loader": "^3.6.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack": "4.41.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
